changed to lorem ipsum dummy

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
 
-    <title>Muhamad Rifai</title>
+    <title>Vigar Rivai Putra</title>
   </head>
   <body id="home">
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
       <div class="container">
-        <a class="navbar-brand text-light" href="#">Muhamad Rifai</a>
+        <a class="navbar-brand text-light" href="#">Vigar Rivai Putra</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -68,15 +68,15 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col">
+          <div>
             <p>
-              A Full-Stack Web Developer who has knowledge of MySQL and MongoDB, Javascript, HTML & CSS, Bootstrap, and ExpressJs, and have knowledge of ReactJS and NextJS frameworks.
+              A Full-Stack Javascript Web Developer who graduated from Industrial Electronic Engineering in
+2018 and joined Bootcamp Fazztrack in 2021. Have experience in programming skills from HTML,
+CSS, Bootstrap to NodeJS, ExpressJS, MySQL with its frameworks i.e ReactJS, ReduxJS and
+NextJS. Enthusiastic in using the Linux system on a daily basis and now focusing to be a full stack
+Javascript developer and interested in Information Technology.
             </p>
           </div>
-          <div class="col">
-            <p>
-              I can also work in a team, as evidenced by working on team projects while still at Bootcamp Have a strong desire to continue to progress and learn and never stop to become a strong and better person in the future.
-            </p>
           </div>
         </div>
       </div>
@@ -97,9 +97,9 @@
             <div class="card">
               <img src="/img/projects/1.png" class="card-img-top" alt="Projects1">
               <div class="card-body">
-                <a href="https://news-apps-5-cm.vercel.app/">Demo App</a> |
-                <a href="https://github.com/MuhDRifai/NewsApps-5CM">Repository App</a>
-                <p class="card-text">5CM is a platform for sharing news about nature, application built using NextJs,Tailwind, and bootstrap 5.</p>
+                <a href="#">Demo App</a> |
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere alias quae odio labore temporibus impedit distinctio quasi voluptatem iure, fugiat ab ducimus laboriosam tempore, repudiandae ipsam aperiam cupiditate tenetur?</p>
               </div>
             </div>
           </div>
@@ -107,8 +107,8 @@
             <div class="card">
               <img src="/img/projects/menu.png" class="card-img-top" alt="Projects2">
               <div class="card-body">
-                <a href="https://github.com/MuhDRifai/Food-Court">Repository App</a>
-                <p class="card-text">Food-Court is an online food delivery service.application built using HTML,Css, and bootstrap 5.</p>
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit facilis veniam perferendis asperiores explicabo ea quae, excepturi expedita numquam quo laboriosam dolor debitis odio! Dolorem dolorum corrupti aliquam non blanditiis?</p>
               </div>
             </div>
           </div>
@@ -116,9 +116,9 @@
             <div class="card">
               <img src="/img/projects/ankasa-bookingdetail.png" class="card-img-top" alt="Projects3">
               <div class="card-body">
-                <a href="https://ankasa-tiket.netlify.app/">Demo App</a> |
-                <a href="https://github.com/Rainbow-io/ankasa-frontend">Repository App</a>
-                <p class="card-text">ANKASA-TICKET - A site to buy cheap airline tickets online. website made with react js, express js, bootstrap 5.</p>
+                <a href="#">Demo App</a> |
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maxime ducimus odit perferendis corporis incidunt quidem tempore aspernatur, omnis perspiciatis reprehenderit sit, doloremque labore. Dolores quis fugit magnam ad quaerat.</p>
               </div>
             </div>
           </div>
@@ -126,9 +126,9 @@
             <div class="card">
               <img src="/img/projects/landingPage.png" class="card-img-top" alt="Projects4">
               <div class="card-body">
-                <a href="https://zwallet-rifai.netlify.app/">Demo App</a> |
-                <a href="https://github.com/MuhDRifai/zwallet-react">Repository App</a>
-                <p class="card-text">Zwallet is a digital wallet application built using reactJs, bootstrap 5, and ExpressJs. This application provides features for top up, transfer, show history, profile update, change password, create pin, update pin, etc.</p>
+                <a href="#">Demo App</a> |
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio cum illo obcaecati inventore ducimus ea, saepe consectetur doloribus animi itaque, cupiditate earum quis ad suscipit corporis magnam at. Veniam, praesentium!</p>
               </div>
             </div>
           </div>
@@ -136,9 +136,9 @@
             <div class="card">
               <img src="/img/projects/cekout-5.png" class="card-img-top" alt="Projects5">
               <div class="card-body">
-                <a href="https://rifai-adventure.netlify.app/">Demo App</a> |
-                <a href="https://github.com/MuhDRifai/Rifai-Adventure">Repository App</a>
-                <p class="card-text">RIFAI ADVENTURE is an online shop that serves the sale and purchase of outdoor equipment besides that we also serve the rental of these sports equipment. application built using HTML, CSS  and bootstrap 5.</p>
+                <a href="#">Demo App</a> |
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis unde placeat tenetur libero odit velit ullam, eaque at sit, est sint omnis aperiam sunt necessitatibus aliquam magnam maiores nam. Iusto?</p>
               </div>
             </div>
           </div>
@@ -146,9 +146,9 @@
             <div class="card">
               <img src="/img/projects/homepage.png" class="card-img-top" alt="Projects6">
               <div class="card-body">
-                <a href="https://blanja-2codeblue.netlify.app/">Demo App</a> |
-                <a href="https://github.com/2codeblue">Repository App</a>
-                <p class="card-text">Belanja is an e-commerce website made with react js, express js, bootstrap 5, and several other technologies. Belanja has implemented multi-seller, where all products sold are the property of the seller.</p>
+                <a href="#">Demo App</a> |
+                <a href="#">Repository App</a>
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sunt accusamus! Amet debitis, ex laboriosam quo aut aspernatur tempora accusantium voluptatibus ullam possimus et repellat itaque labore deserunt neque facilis.</p>
               </div>
             </div>
           </div>
@@ -158,7 +158,7 @@
     </section>
     <!-- END PROJETS -->
 
-    <!-- CONTACT -->
+    <!-- CONTACT
       <section id="contact">
         <div class="container">
           <div class="row text-center mb-3">
@@ -187,12 +187,12 @@
           </div>
         </div>
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,48C384,64,480,96,576,112C672,128,768,128,864,112C960,96,1056,64,1152,42.7C1248,21,1344,11,1392,5.3L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-      </section>
+      </section> -->
     <!-- END CONTACT -->
 
     <!-- FOOTER -->
     <footer class="bg-primary text-center text-white pb-3">
-      <p>Created <i class="bi bi-instagram"></i> <a class="text-white fw-bold" href="https://www.instagram.com/donquixote_rosinante23/" >MuhDRifai</a></p>
+      <p>Created <i class="bi bi-instagram"></i> <a class="text-white fw-bold text-decoration-none" href="https://www.instagram.com/vigarp_/" >vigarp_</a></p>
     </footer>
     <!-- END FOOTER -->
 
