updated foto profile and about-me

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
     <!-- JUMBOTRON -->
     <section class="jumbotron text-center">
-      <img src="/img/rifai.png" alt="" width="200" class="rounded-circle img-thumbnail" />
+      <img src="/img/vigar.png" alt="" width="200" class="rounded-pill img-thumbnail" />
       <h1 class="display-4">Vigar Rivai Putra</h1>
       <p class="lead">Website Developer</p>
       <svg 
@@ -68,10 +68,16 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div>
+          <div class="col">
             <p>
               A Full-Stack Javascript Web Developer who graduated from Industrial Electronic Engineering in
-2018 and joined Bootcamp Fazztrack in 2021. Have experience in programming skills from HTML,
+2018 and joined Bootcamp Fazztrack in 2021. Have interned & worked in telecommunication and retail companies in Jakarta.
+
+            </p>
+          </div>
+          <div class="col">
+            <p>
+              Also experienced in programming skills from HTML,
 CSS, Bootstrap to NodeJS, ExpressJS, MySQL with its frameworks i.e ReactJS, ReduxJS and
 NextJS. Enthusiastic in using the Linux system on a daily basis and now focusing to be a full stack
 Javascript developer and interested in Information Technology.
