fix styling and add some feature

--- a/index.html
+++ b/index.html
@@ -25,17 +25,14 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
-            <li class="nav-item">
-              <a class="nav-link active" href="#home">Home</a>
-            </li>
-            <li class="nav-item">
+            <li class="nav-item mx-1">
               <a class="nav-link" href="#about">About Me</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#projects">Projects</a>
+            <li class="nav-item mx-1">
+              <a class="nav-link" href="#contact-me">Contact me</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#contact">Contact</a>
+            <li class="nav-item mx-1 resume">
+              <a class="nav-link" href="./my-resume.pdf" download="resume">Resume</a>
             </li>
           </ul>
         </div>
@@ -67,22 +64,14 @@
             <h2>About Me</h2>
           </div>
         </div>
-        <div class="row justify-content-center fs-5 text-center">
-          <div class="col">
+        <div class="row justify-content-center fs-5 text-start">
             <p>
               A Full-Stack Javascript Web Developer who graduated from Industrial Electronic Engineering in
-2018 and joined Bootcamp Fazztrack in 2021. Have interned & worked in telecommunication and retail companies in Jakarta.
-
-            </p>
-          </div>
-          <div class="col">
-            <p>
-              Also experienced in programming skills from HTML,
+2018 and joined Bootcamp Fazztrack in 2021. Have in programming skills from HTML,
 CSS, Bootstrap to NodeJS, ExpressJS, MySQL with its frameworks i.e ReactJS, ReduxJS and
 NextJS. Enthusiastic in using the Linux system on a daily basis and now focusing to be a full stack
 Javascript developer and interested in Information Technology.
             </p>
-          </div>
           </div>
         </div>
       </div>
@@ -98,63 +87,44 @@ Javascript developer and interested in Information Technology.
             <h2>Projects</h2>
           </div>
         </div>
-        <div class="row justify-content-center">
+        <div class="row justify-content-flex-start">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="/img/projects/1.png" class="card-img-top" alt="Projects1">
+              <img src="/img/homepage-zwallet.png" class="card-img-top" alt="Projects1" width="350px" height="250px">
               <div class="card-body">
-                <a href="#">Demo App</a> |
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Adipisci facere alias quae odio labore temporibus impedit distinctio quasi voluptatem iure, fugiat ab ducimus laboriosam tempore, repudiandae ipsam aperiam cupiditate tenetur?</p>
+                <a href="https://zwallet-vigar.netlify.app/" target="_blank">Demo App</a> |
+                <a href="https://github.com/vigarp/zwallet-frontend" target="_blank">Repository App</a>
+                <p class="card-text">Zwallet has several features including top-up and sending money to your friends with just a few clicks. This app was built by ReactJS and Redux in frontend, using ExpressJS and MySQL database in backend. Also using Socket.IO for notifications. </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="/img/projects/menu.png" class="card-img-top" alt="Projects2">
+              <img src="/img/blanja-login.png" class="card-img-top" alt="Projects2" width="350px" height="250px">
               <div class="card-body">
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Suscipit facilis veniam perferendis asperiores explicabo ea quae, excepturi expedita numquam quo laboriosam dolor debitis odio! Dolorem dolorum corrupti aliquam non blanditiis?</p>
+                <a href="https://blanja-app.netlify.app/" target="_blank">Demo App</a> |
+                <a href="https://github.com/vigarp/blanja-app" target="_blank">Repository App</a>
+                <p class="card-text">Blanja App is the prime project team of an e-commerce web platform for selling clothes online. Thisproject was built formerly as a fullstack, putting and merging together the ReactJS components that other friends made with GitHub version control.</p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="/img/projects/ankasa-bookingdetail.png" class="card-img-top" alt="Projects3">
+              <img src="/img/ankasa-loginpage.png" class="card-img-top" alt="Projects3" width="350px" height="250px">
               <div class="card-body">
-                <a href="#">Demo App</a> |
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Commodi maxime ducimus odit perferendis corporis incidunt quidem tempore aspernatur, omnis perspiciatis reprehenderit sit, doloremque labore. Dolores quis fugit magnam ad quaerat.</p>
+                <a href="https://ankasa-rainbow.netlify.app/" target="_blank">Demo App</a> |
+                <a href="https://github.com/vigarp/ankasa-frontend" target="_blank">Repository App</a>
+                <p class="card-text">Ankasa Ticketing is also a project team of a web-app to book flight tickets online. This project was built as project owner and a fullstack with ReactJS, Redux in FE and BE using ExpressJS and MySQL. Also use Socket.IO for chat notification service. </p>
               </div>
             </div>
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="/img/projects/landingPage.png" class="card-img-top" alt="Projects4">
+              <img src="/img/newsapp-login.png" class="card-img-top" alt="Projects4" width="350px" height="250px">
               <div class="card-body">
-                <a href="#">Demo App</a> |
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio cum illo obcaecati inventore ducimus ea, saepe consectetur doloribus animi itaque, cupiditate earum quis ad suscipit corporis magnam at. Veniam, praesentium!</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/projects/cekout-5.png" class="card-img-top" alt="Projects5">
-              <div class="card-body">
-                <a href="#">Demo App</a> |
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nobis unde placeat tenetur libero odit velit ullam, eaque at sit, est sint omnis aperiam sunt necessitatibus aliquam magnam maiores nam. Iusto?</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/projects/homepage.png" class="card-img-top" alt="Projects6">
-              <div class="card-body">
-                <a href="#">Demo App</a> |
-                <a href="#">Repository App</a>
-                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur, sunt accusamus! Amet debitis, ex laboriosam quo aut aspernatur tempora accusantium voluptatibus ullam possimus et repellat itaque labore deserunt neque facilis.</p>
+                <a href="https://newsapp-vigar.vercel.app/" target="_blank">Demo App</a> |
+                <a href="https://github.com/vigarp/newsapp-frontend">Repository App</a>
+                <p class="card-text">News today is a news platform like social media, allowing every user to write and share their opinions. This news app was created by using NextJS for its frontend and also using ExpressJS framework and MySQL database as the backend. </p>
               </div>
             </div>
           </div>
@@ -164,41 +134,29 @@ Javascript developer and interested in Information Technology.
     </section>
     <!-- END PROJETS -->
 
-    <!-- CONTACT
-      <section id="contact">
-        <div class="container">
-          <div class="row text-center mb-3">
-            <div class="col">
-              <h2>Contact Me</h2>
-            </div>
+    <section id="contact-me">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Get in Touch</h2>
           </div>
-          <div class="row justify-content-center">
-            <div class="col-md-5">
-              <form>
-                <div class="mb-3">
-                  <label for="name" class="form-label">Full Name</label>
-                  <input type="text" class="form-control" id="name" aria-describedby="name">
-                </div>
-                <div class="mb-3">
-                  <label for="email" class="form-label">Email address</label>
-                  <input type="email" class="form-control" id="email">
-                </div>
-                <div class="mb-3">
-                  <label for="message" class="form-label">Your Message</label>
-                  <textarea class="form-control" id="message" rows="3"></textarea>
-                </div>
-                <button type="submit" class="btn btn-primary">Submit</button>
-              </form>
+        </div>
+        <div class="row justify-content-center fs-5 text-start">
+            <p>
+              My inbox is always open if you have any questions or say Hi to me. Feel free to mail me any relevant job updates and want to collaborate with me. Thanks 
+            </p>
+            <div class="btn-mail">
+              <a href="mailto:vigar.ext@gmail.com" class="text-decoration-none">Mail Me</a>
             </div>
           </div>
         </div>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#0d6efd" fill-opacity="1" d="M0,32L48,32C96,32,192,32,288,48C384,64,480,96,576,112C672,128,768,128,864,112C960,96,1056,64,1152,42.7C1248,21,1344,11,1392,5.3L1440,0L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-      </section> -->
-    <!-- END CONTACT -->
+      </div>
+      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,192L48,181.3C96,171,192,149,288,165.3C384,181,480,235,576,229.3C672,224,768,160,864,133.3C960,107,1056,117,1152,149.3C1248,181,1344,235,1392,261.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
+    </section>
 
     <!-- FOOTER -->
     <footer class="bg-primary text-center text-white pb-3">
-      <p>Created <i class="bi bi-instagram"></i> <a class="text-white fw-bold text-decoration-none" href="https://www.instagram.com/vigarp_/" >vigarp_</a></p>
+      <p class="pt-3">Created <i class="bi bi-instagram"></i> <a class="text-white fw-bold text-decoration-none" href="https://www.instagram.com/vigarp/" target="_blank" >vigarp</a></p>
     </footer>
     <!-- END FOOTER -->
 
