fix btn styling hover and change top section

--- a/index.html
+++ b/index.html
@@ -42,9 +42,8 @@
 
     <!-- JUMBOTRON -->
     <section class="jumbotron text-center">
-      <img src="/img/vigar.png" alt="" width="200" class="rounded-pill img-thumbnail" />
-      <h1 class="display-4">Vigar Rivai Putra</h1>
-      <p class="lead">Website Developer</p>
+      <h1 class="display-4 mt-5">Hello, I am Vigar. I am a Fullstack Developer</h1>
+      <a class="btn lead getTouch mt-5" href="#about">Get in Touch</a>
       <svg 
         xmlns="http://www.w3.org/2000/svg" 
         viewBox="0 0 1440 320">
