--- a/index.html
+++ b/index.html
@@ -1,171 +1,156 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" 
-    rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" 
-    crossorigin="anonymous" />
-    <!-- ICON -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
-
-    <title>Vigar Rivai Putra</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      src="https://kit.fontawesome.com/9650a62e47.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="icon" type="image/x-icon" href="/img/programming-svgrepo-com.svg">
+    <title>Vigar Site</title>
   </head>
-  <body id="home">
-    <!-- NAVBAR -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm fixed-top">
-      <div class="container">
-        <a class="navbar-brand text-light" href="#">Vigar Rivai Putra</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item mx-1">
-              <a class="nav-link" href="#about">About Me</a>
-            </li>
-            <li class="nav-item mx-1">
-              <a class="nav-link" href="#contact-me">Contact me</a>
-            </li>
-            <li class="nav-item mx-1 resume">
-              <a class="nav-link" href="./my-resume.pdf" download="resume">Resume</a>
-            </li>
-          </ul>
-        </div>
+
+  <body>
+    <!-- PAGE ABOUT -->
+    <header id="about">
+      <nav id="navbar">
+        <ul>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Work</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      <div id="welcome-section" class="container">
+        <h1 id="title">I am Vigar</h1>
+        <p class="lead"><em>a full-stack web developer</em></p>
       </div>
-    </nav>
-    <!-- END NAVBAR -->
+    </header>
 
-    <!-- JUMBOTRON -->
-    <section class="jumbotron text-center">
-      <h1 class="display-4 mt-5">Hello, I am Vigar. I am a Fullstack Developer</h1>
-      <a class="btn lead getTouch mt-5" href="#about">Get in Touch</a>
-      <svg 
-        xmlns="http://www.w3.org/2000/svg" 
-        viewBox="0 0 1440 320">
-        <path fill="#fff" 
-          fill-opacity="1" 
-          d="M0,192L48,186.7C96,181,192,171,288,149.3C384,128,480,96,576,112C672,128,768,192,864,197.3C960,203,1056,149,1152,133.3C1248,117,1344,139,1392,149.3L1440,160L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z">
-        </path>
-      </svg>
-    </section>
-    <!-- END JUMBO TRON -->
-
-    <!-- ABOUT -->
-    <section id="about">
-      <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>About Me</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-start">
-            <p>
-              A Full-Stack Javascript Web Developer who graduated from Industrial Electronic Engineering in
-2018 and joined Bootcamp Fazztrack in 2021. Have in programming skills from HTML,
-CSS, Bootstrap to NodeJS, ExpressJS, MySQL with its frameworks i.e ReactJS, ReduxJS and
-NextJS. Enthusiastic in using the Linux system on a daily basis and now focusing to be a full stack
-Javascript developer and interested in Information Technology.
-            </p>
-          </div>
-        </div>
-      </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,192L48,181.3C96,171,192,149,288,165.3C384,181,480,235,576,229.3C672,224,768,160,864,133.3C960,107,1056,117,1152,149.3C1248,181,1344,235,1392,261.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    </section>
-    <!-- END ABOUT -->
-
-    <!-- PROJECTS -->
+    <!-- PROJECT SECTION -->
     <section id="projects">
+      <div class="project-tile">
+        <h1 id="caption">"These are some of my projects"</h1>
+        <br />
+        <div id="bottom-line"></div>
+        <div class="projects">
+          <div class="box">
+            <a
+              target="_blank"
+              href="https://jannahfirdaus.com/"
+              alt="project-img"
+              class="project-img"
+            >
+              <img
+                src="img/jf-prayer.png"
+                alt="project-img"
+                class="project-img"
+              />
+              <p>
+                <span class="code">&lt;</span>
+                jannahfirdaus.com
+                <span class="code">/&gt;</span>
+              </p>
+            </a>
+          </div>
+
+          <div target="_blank" class="box">
+            <a href="https://catpedia-vigar.vercel.app/">
+              <img
+                src="img/catpedia.png"
+                alt="project-img"
+                class="project-img"
+              />
+              <p>
+                <span class="code">&lt;</span>
+                catPedia
+                <span class="code">/&gt;</span>
+              </p>
+            </a>
+          </div>
+
+          <div class="box">
+            <a target="_blank" href="https://zwallet-vigar.netlify.app/">
+              <img
+                src="img/homepage-zwallet.png"
+                alt="project-img"
+                class="project-img"
+              />
+              <p>
+                <span class="code">&lt;</span>
+                Zwallet
+                <span class="code">/&gt;</span>
+              </p>
+            </a>
+          </div>
+
+          <div class="box">
+            <a
+              target="_blank"
+              href="https://posapp-vigar.netlify.app/"
+              alt="project-img"
+              class="project-img"
+            >
+              <img
+                src="img/pos-app.png"
+                alt="project-img"
+                class="project-img"
+              />
+              <p>
+                <span class="code">&lt;</span>
+                POS App
+                <span class="code">/&gt;</span>
+              </p>
+            </a>
+          </div>
+      </div>
+    </section>
+
+    <!-- CONTACT SECTION -->
+    <section id="contact">
       <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>Projects</h2>
-          </div>
-        </div>
-        <div class="row justify-content-flex-start">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/homepage-zwallet.png" class="card-img-top" alt="Projects1" width="350px" height="250px">
-              <div class="card-body">
-                <a href="https://zwallet-vigar.netlify.app/" target="_blank">Demo App</a> |
-                <a href="https://github.com/vigarp/zwallet-frontend" target="_blank">Repository App</a>
-                <p class="card-text">Zwallet has several features including top-up and sending money to your friends with just a few clicks. This app was built by ReactJS and Redux in frontend, using ExpressJS and MySQL database in backend. Also using Socket.IO for notifications. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/blanja-login.png" class="card-img-top" alt="Projects2" width="350px" height="250px">
-              <div class="card-body">
-                <a href="https://blanja-app.netlify.app/" target="_blank">Demo App</a> |
-                <a href="https://github.com/vigarp/blanja-app" target="_blank">Repository App</a>
-                <p class="card-text">Blanja App is the prime project team of an e-commerce web platform for selling clothes online. Thisproject was built formerly as a fullstack, putting and merging together the ReactJS components that other friends made with GitHub version control.</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/ankasa-loginpage.png" class="card-img-top" alt="Projects3" width="350px" height="250px">
-              <div class="card-body">
-                <a href="https://ankasa-rainbow.netlify.app/" target="_blank">Demo App</a> |
-                <a href="https://github.com/vigarp/ankasa-frontend" target="_blank">Repository App</a>
-                <p class="card-text">Ankasa Ticketing is also a project team of a web-app to book flight tickets online. This project was built as project owner and a fullstack with ReactJS, Redux in FE and BE using ExpressJS and MySQL. Also use Socket.IO for chat notification service. </p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="/img/newsapp-login.png" class="card-img-top" alt="Projects4" width="350px" height="250px">
-              <div class="card-body">
-                <a href="https://newsapp-vigar.vercel.app/" target="_blank">Demo App</a> |
-                <a href="https://github.com/vigarp/newsapp-frontend">Repository App</a>
-                <p class="card-text">News today is a news platform like social media, allowing every user to write and share their opinions. This news app was created by using NextJS for its frontend and also using ExpressJS framework and MySQL database as the backend. </p>
-              </div>
-            </div>
+        <h1>Let's work together...</h1>
+        <div class="social">
+          <div>
+            <a
+              id="profile-link"
+              target="_blank"
+              href="https://www.github.com/vigarp"
+            >
+              <i class="fab fa-github fa-1x"></i>
+              Github
+            </a>
+            <a
+              id="profile-link"
+              target="_blank"  
+              href="mailto:vigar.ext@gmail.com">
+              <i class="fas fa-envelope-open-text fa-1x"></i>
+              Mail
+            </a>
+            <a 
+            id="profile-link"
+            target="_blank" 
+            href="https://linkedin.com/in/vigarp">
+            <i class="fa fa-linkedin fa-1x"></i>
+              LinkedIn
+            </a>
           </div>
         </div>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,224L48,224C96,224,192,224,288,234.7C384,245,480,267,576,240C672,213,768,139,864,106.7C960,75,1056,85,1152,90.7C1248,96,1344,96,1392,96L1440,96L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
     </section>
-    <!-- END PROJETS -->
 
-    <section id="contact-me">
+    <!-- FOOTER SECTION -->
+    <footer id="main-footer">
       <div class="container">
-        <div class="row text-center mb-3">
-          <div class="col">
-            <h2>Get in Touch</h2>
-          </div>
-        </div>
-        <div class="row justify-content-center fs-5 text-start">
-            <p>
-              My inbox is always open if you have any questions or say Hi to me. Feel free to mail me any relevant job updates and want to collaborate with me. Thanks 
-            </p>
-            <div class="btn-mail">
-              <a href="mailto:vigar.ext@gmail.com" class="text-decoration-none">Mail Me</a>
-            </div>
-          </div>
-        </div>
+        <p>&copy; Copyright Free</p>
+        <p id="creator">
+          This site recreated by
+          <a href="https://github.com/FreeCodeCamp-Solutions/"
+            >FreeCodeCamp-Solutions</a
+          >
+        </p>
       </div>
-      <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#e2edff" fill-opacity="1" d="M0,192L48,181.3C96,171,192,149,288,165.3C384,181,480,235,576,229.3C672,224,768,160,864,133.3C960,107,1056,117,1152,149.3C1248,181,1344,235,1392,261.3L1440,288L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
-    </section>
-
-    <!-- FOOTER -->
-    <footer class="bg-primary text-center text-white pb-3">
-      <p class="pt-3">Created <i class="bi bi-instagram"></i> <a class="text-white fw-bold text-decoration-none" href="https://www.instagram.com/vigarp/" target="_blank" >vigarp</a></p>
     </footer>
-    <!-- END FOOTER -->
-
-    <!-- Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-     integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
-     crossorigin="anonymous">
-    </script>
   </body>
 </html>
-
-
-
