refreshing and add some insight

--- a/index.html
+++ b/index.html
@@ -1,156 +1,166 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script
-      src="https://kit.fontawesome.com/9650a62e47.js"
-      crossorigin="anonymous"
-    ></script>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="icon" type="image/x-icon" href="/img/programming-svgrepo-com.svg">
-    <title>Vigar Site</title>
-  </head>
 
-  <body>
-    <!-- PAGE ABOUT -->
-    <header id="about">
-      <nav id="navbar">
-        <ul>
-          <li><a href="#about">About</a></li>
-          <li><a href="#projects">Work</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
-      <div id="welcome-section" class="container">
-        <h1 id="title">I am Vigar</h1>
-        <p class="lead"><em>a full-stack web developer</em></p>
-      </div>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <script src="https://kit.fontawesome.com/9650a62e47.js" crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="icon" type="image/x-icon" href="/img/programming-svgrepo-com.svg">
+  <title>Vigar Site</title>
+</head>
 
-    <!-- PROJECT SECTION -->
-    <section id="projects">
-      <div class="project-tile">
-        <h1 id="caption">"These are some of my projects"</h1>
-        <br />
-        <div id="bottom-line"></div>
-        <div class="projects">
-          <div class="box">
-            <a
-              target="_blank"
-              href="https://jannahfirdaus.com/"
-              alt="project-img"
-              class="project-img"
-            >
-              <img
-                src="img/jf-prayer.png"
-                alt="project-img"
-                class="project-img"
-              />
-              <p>
-                <span class="code">&lt;</span>
-                jannahfirdaus.com
-                <span class="code">/&gt;</span>
-              </p>
-            </a>
-          </div>
+<body>
+  <!-- PAGE ABOUT -->
+  <header id="about">
+    <nav id="navbar">
+      <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#projects">Work</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <div id="welcome-section" class="container">
+      <h1 id="title">I am Vigar</h1>
+      <p class="lead">A full-stack Javascript Web Developer who graduated from Industrial Electronic Engineering in 2018
+        and joined Bootcamp Fazztrack in 2021. Have experience in programming skills using ReactJS and NextJS.
+        Enthusiastic in using the Linux system on a daily basis and interested in Information Technology.</p>
+    </div>
+  </header>
 
-          <div target="_blank" class="box">
-            <a href="https://catpedia-vigar.vercel.app/">
-              <img
-                src="img/catpedia.png"
-                alt="project-img"
-                class="project-img"
-              />
-              <p>
-                <span class="code">&lt;</span>
-                catPedia
-                <span class="code">/&gt;</span>
-              </p>
-            </a>
-          </div>
-
-          <div class="box">
-            <a target="_blank" href="https://zwallet-vigar.netlify.app/">
-              <img
-                src="img/homepage-zwallet.png"
-                alt="project-img"
-                class="project-img"
-              />
-              <p>
-                <span class="code">&lt;</span>
-                Zwallet
-                <span class="code">/&gt;</span>
-              </p>
-            </a>
-          </div>
-
-          <div class="box">
-            <a
-              target="_blank"
-              href="https://posapp-vigar.netlify.app/"
-              alt="project-img"
-              class="project-img"
-            >
-              <img
-                src="img/pos-app.png"
-                alt="project-img"
-                class="project-img"
-              />
-              <p>
-                <span class="code">&lt;</span>
-                POS App
-                <span class="code">/&gt;</span>
-              </p>
-            </a>
-          </div>
-      </div>
-    </section>
-
-    <!-- CONTACT SECTION -->
-    <section id="contact">
-      <div class="container">
-        <h1>Let's work together...</h1>
-        <div class="social">
-          <div>
-            <a
-              id="profile-link"
-              target="_blank"
-              href="https://www.github.com/vigarp"
-            >
-              <i class="fab fa-github fa-1x"></i>
-              Github
-            </a>
-            <a
-              id="profile-link"
-              target="_blank"  
-              href="mailto:vigar.ext@gmail.com">
-              <i class="fas fa-envelope-open-text fa-1x"></i>
-              Mail
-            </a>
-            <a 
-            id="profile-link"
-            target="_blank" 
-            href="https://linkedin.com/in/vigarp">
-            <i class="fa fa-linkedin fa-1x"></i>
-              LinkedIn
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- FOOTER SECTION -->
-    <footer id="main-footer">
-      <div class="container">
-        <p>&copy; Copyright Free</p>
-        <p id="creator">
-          This site recreated by
-          <a href="https://github.com/FreeCodeCamp-Solutions/"
-            >FreeCodeCamp-Solutions</a
-          >
+  <!-- SKILLS SECTION -->
+  <section id="skills">
+    <div class="container">
+      <div class="left">
+        <p>
+          I have experience in several IT fields for several years from the telecommunications, retail and tourism
+          sectors.</p>
+        <p>
+          Then I also followed the bootcamp for 6 months to study Fullstack Web Developer and have approximately a year
+          of experience as a Frevend Web Developer.
+        </p>
+        <p>
+          Besides that, I am currently also actively studying other programming language stacks such as PHP and then
+          Laravel. Also actively participating in several courses to add programming insights from various online
+          platforms.
         </p>
       </div>
-    </footer>
-  </body>
+      <div class="right">
+        <div class="box">
+          <p>HTML</p>
+        </div>
+        <div class="box">
+          <p>CSS</p>
+        </div>
+        <div class="box">
+          <p>Javascript</p>
+        </div>
+        <div class="box">
+          <p>React JS</p>
+        </div>
+        <div class="box">
+          <p>Next JS</p>
+        </div>
+        <div class="box">
+          <p>Tailwind CSS</p>
+        </div>
+        <div class="box">
+          <p>Express JS</p>
+        </div>
+      </div>
+    </div>
+
+  </section>
+
+  <!-- PROJECT SECTION -->
+  <section id="projects">
+    <div class="project-tile">
+      <h1 id="caption">"These are some of my projects"</h1>
+      <br />
+      <div id="bottom-line"></div>
+      <div class="projects">
+
+        <!-- JF-Marketplace -->
+        <div class="box">
+          <a target="_blank" href="https://github.com/vigarp/jf-client" alt="project-img" class="project-img">
+            <img src="img/jf-marketplace-homepage.png" alt="project-img" class="project-img" />
+            <p>
+              <span class="code">&lt;</span>
+              JF-Marketplace
+              <span class="code">/&gt;</span>
+            </p>
+          </a>
+          <p class="description">JF-Marketplace web application was planned for a marketplace and jamaah service, this
+            application is made using Next.JS, several libraries such as Redux, Axios and Mantine for its CSS
+            frameworks. I acts as a Frontend Web Developer translating the prototype of Figma into a code form. I was
+            assigned to work on the homepage in this project.</p>
+        </div>
+
+        <!-- JF-Admin -->
+        <div class="box">
+          <a target="_blank" href="https://github.com/vigarp/jf-admin" alt="project-img" class="project-img">
+            <img src="img/jf-admin-product.png" alt="project-img" class="project-img" />
+            <p>
+              <span class="code">&lt;</span>
+              JF-Admin
+              <span class="code">/&gt;</span>
+            </p>
+          </a>
+          <p class="description">Just like the JF-Marketplace project, but this JF-Admin is more a place for management
+            of the company's inventory. In this project I was assigned to several parts such as the product, ticketing
+            and visa sections.</p>
+        </div>
+        <div class="box">
+          <a target="_blank" href="https://github.com/vigarp/zwallet-frontend/">
+            <img src="img/homepage-zwallet.png" alt="project-img" class="project-img" />
+            <p>
+              <span class="code">&lt;</span>
+              Zwallet
+              <span class="code">/&gt;</span>
+            </p>
+          </a>
+          <p class="description">Zwallet has several features including top-up and sending money to your friends with
+            just a few clicks. This app was built by ReactJS and Redux in frontend, using ExpressJS and MySQL database
+            in backend. This project is a Fullstack Web Developer training project while I was on bootcamp </p>
+        </div>
+
+      </div>
+  </section>
+
+  <!-- CONTACT SECTION -->
+  <section id="contact">
+    <div class="container">
+      <h1>Let's work together...</h1>
+      <div class="social">
+        <div>
+          <a id="profile-link" target="_blank" href="https://www.github.com/vigarp">
+            <i class="fab fa-github fa-1x"></i>
+            Github
+          </a>
+          <a id="profile-link" target="_blank" href="mailto:vigar.ext@gmail.com">
+            <i class="fas fa-envelope-open-text fa-1x"></i>
+            Mail
+          </a>
+          <a id="profile-link" target="_blank" href="https://linkedin.com/in/vigarp">
+            <i class="fa fa-linkedin fa-1x"></i>
+            LinkedIn
+          </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- FOOTER SECTION -->
+  <footer id="main-footer">
+    <div class="container">
+      <p>&copy; Copyright Free</p>
+      <p id="creator">
+        This site recreated by
+        <a href="https://github.com/FreeCodeCamp-Solutions/">FreeCodeCamp-Solutions</a>
+      </p>
+    </div>
+  </footer>
+</body>
+
 </html>
