--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="https://kit.fontawesome.com/9650a62e47.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
   <link rel="icon" type="image/x-icon" href="/img/programming-svgrepo-com.svg">
-  <title>Vigar Site</title>
+  <title>Vigar Rivai Putra || Personal Portfolio Page</title>
 </head>
 
 <body>
