minor fix: changed content context

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </ul>
     </nav>
     <div id="welcome-section" class="container">
-      <h1 id="title">I am Vigar</h1>
+      <h1 id="title">Hello, I am Vigar</h1>
       <p class="lead">A full-stack Javascript Web Developer who graduated from Industrial Electronic Engineering in 2018
         and joined Bootcamp Fazztrack in 2021. Have experience in programming skills using ReactJS and NextJS.
         Enthusiastic in using the Linux system on a daily basis and interested in Information Technology.</p>
@@ -38,10 +38,10 @@
           sectors.</p>
         <p>
           Then I also followed the bootcamp for 6 months to study Fullstack Web Developer and have approximately a year
-          of experience as a Frevend Web Developer.
+          of experience as a Frontend Web Developer.
         </p>
         <p>
-          Besides that, I am currently also actively studying other programming language stacks such as PHP and then
+          Besides that, I am currently also actively learning other programming language stacks such as PHP and then
           Laravel. Also actively participating in several courses to add programming insights from various online
           platforms.
         </p>
@@ -67,6 +67,12 @@
         </div>
         <div class="box">
           <p>Express JS</p>
+        </div>
+        <div class="box">
+          <p>MySQL</p>
+        </div>
+        <div class="box">
+          <p>PHP</p>
         </div>
       </div>
     </div>
@@ -122,7 +128,7 @@
           </a>
           <p class="description">Zwallet has several features including top-up and sending money to your friends with
             just a few clicks. This app was built by ReactJS and Redux in frontend, using ExpressJS and MySQL database
-            in backend. This project is a Fullstack Web Developer training project while I was on bootcamp </p>
+            in backend. This project is a Fullstack Web Developer training project while I was on bootcamp.</p>
         </div>
 
       </div>
@@ -131,20 +137,20 @@
   <!-- CONTACT SECTION -->
   <section id="contact">
     <div class="container">
-      <h1>Let's work together...</h1>
+      <h1>Know more about me...</h1>
       <div class="social">
         <div>
           <a id="profile-link" target="_blank" href="https://www.github.com/vigarp">
             <i class="fab fa-github fa-1x"></i>
             Github
           </a>
-          <a id="profile-link" target="_blank" href="mailto:vigar.ext@gmail.com">
-            <i class="fas fa-envelope-open-text fa-1x"></i>
-            Mail
-          </a>
           <a id="profile-link" target="_blank" href="https://linkedin.com/in/vigarp">
             <i class="fa fa-linkedin fa-1x"></i>
             LinkedIn
+          </a>
+          <a id="profile-link" target="_blank" href="mailto:vigar.ext@gmail.com">
+            <i class="fas fa-envelope-open-text fa-1x"></i>
+            Mail
           </a>
         </div>
       </div>
