create burger menu for mobile

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <script src="https://kit.fontawesome.com/9650a62e47.js" crossorigin="anonymous"></script>
   <link rel="stylesheet" type="text/css" href="css/style.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="icon" type="image/x-icon" href="/img/programming-svgrepo-com.svg">
   <title>Vigar Rivai Putra || Personal Portfolio Page</title>
 </head>
@@ -17,10 +18,25 @@
       <ul>
         <li><a href="#about">About</a></li>
         <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Work</a></li>
+        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
+
+    <!-- TOP NAV MOBILE -->
+    <div class="topnav">
+      <div class="active"></div>
+      <ul id="myLinks">
+        <li><a href="#about" onclick="toggleBurger()">About</a></li>
+        <li><a href="#skills" onclick="toggleBurger()">Skills</a></li>
+        <li><a href="#projects" onclick="toggleBurger()">Projects</a></li>
+        <li><a href="#contact" onclick="toggleBurger()">Contact</a></li>
+      </ul>
+      <a href="javascript:void(0);" id="#home" class="icon" onclick="toggleBurger()">
+        <i class="fa fa-bars fa-lg"></i>
+      </a>
+    </div>
+
     <div id="welcome-section" class="container">
       <h1 id="title">Hello, I am Vigar</h1>
       <p class="lead">A full-stack Javascript Web Developer who graduated from Industrial Electronic Engineering in 2018
@@ -167,6 +183,17 @@
       </p>
     </div>
   </footer>
+
+  <script>
+    function toggleBurger() {
+  var x = document.getElementById("myLinks");
+  if (x.style.display === "block") {
+    x.style.display = "none";
+  } else {
+    x.style.display = "block";
+  }
+}
+    </script>
 </body>
 
 </html>
